Update: component vertical alignment property (fixes #353) (#354)
* component vertical alignment property

* Updated example.json

* Updated block schema

* Optimised class application

* Amended schema defaults

--- a/less/core/block.less
+++ b/less/core/block.less
@@ -36,4 +36,14 @@
   &__instruction a {
     .link-text;
   }
+
+  // Aligns child components centrally on the vertical axis
+  &.align-vert-center .component__container {
+    align-items: center;
+  }
+
+  // Aligns child components to the bottom of the parent block on the vertical axis
+  &.align-vert-bottom .component__container {
+    align-items: flex-end;
+  }
 }
