--- a/less/project/theme-extras.less
+++ b/less/project/theme-extras.less
@@ -54,19 +54,6 @@
 // Block
 // --------------------------------------------------
 
-// Custom class added to block
-// Aligns child components centrally on the vertical axis
-// --------------------------------------------------
-.block.align-vert-center .component__container {
-  align-items: center;
-}
-
-// Aligns child components to the bottom of the parent block on the vertical axis
-// --------------------------------------------------
-.block.align-vert-bottom .component__container {
-  align-items: flex-end;
-}
-
 // Reverses the visual layout of the components above the medium breakpoint
 // e.g. Left layout components would still render first in the DOM order
 // but visually appear on the right hand side above the medium breakpoint. The
